fix some bug and add router

--- a/views/detail/collection.hbs
+++ b/views/detail/collection.hbs
@@ -1,12 +1,3 @@
-<!doctype html>
-<html lang="en">
-
-<head>
-    <style>
-        @import url('https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap');
-    </style>
-</head>
-
 <body>
     <div class="container-fluid ">
         <div style="margin-top: 30px;margin-bottom: 0px ;margin-left: 0px;font-size: 18px  ;font-family: Roboto Mono">
@@ -71,13 +62,14 @@
 
         </div>
 
-        <div class="text-center" style="font-family: Roboto Mono, monospace;font-size:30px;margin-top: 20px;color:#BA9EDF">
+        <div class="text-center"
+            style="font-family: Roboto Mono, monospace;font-size:30px;margin-top: 20px;color:#BA9EDF">
             <p>SPECIAL PRIZES</p>
         </div>
 
         <div class="dropdown" style="margin-left: 865px;">
-            <button class="btn " type="button" data-toggle="dropdown">SẮP XẾP THEO: 
-                        <span class="caret"></span></button>
+            <button class="btn " type="button" data-toggle="dropdown">SẮP XẾP THEO:
+                <span class="caret"></span></button>
             <ul class="dropdown-menu">
                 <li><a href="#">GIÁ TỪ CAO ĐẾN THẤP</a></li>
                 <li><a href="#">GIÁ TỪ TẤP ĐẾN CAO</a></li>
@@ -110,7 +102,8 @@
             <!-- col // -->
             <div class="col-md-3 ">
                 <figure class="card card-product ">
-                    <div class="img-wrap "> <img src="https://s9.postimg.org/4ooze1tof/image.jpg " <a class="btn-overlay " href="# "><i class="fa fa-search-plus "></i> Quick view</a>
+                    <div class="img-wrap "> <img src="https://s9.postimg.org/4ooze1tof/image.jpg " <a
+                            class="btn-overlay " href="# "><i class="fa fa-search-plus "></i> Quick view</a>
                     </div>
                     <figcaption class="info-wrap ">
                         <h6 class="title text-dots "><a href="# ">The name of product</a></h6>
@@ -195,7 +188,8 @@
             <!-- col // -->
             <div class="col-md-3 ">
                 <figure class="card card-product ">
-                    <div class="img-wrap "> <img src="https://s9.postimg.org/4ooze1tof/image.jpg " <a class="btn-overlay " href="# "><i class="fa fa-search-plus "></i> Quick view</a>
+                    <div class="img-wrap "> <img src="https://s9.postimg.org/4ooze1tof/image.jpg " <a
+                            class="btn-overlay " href="# "><i class="fa fa-search-plus "></i> Quick view</a>
                     </div>
                     <figcaption class="info-wrap ">
                         <h6 class="title text-dots "><a href="# ">The name of product</a></h6>
@@ -280,7 +274,8 @@
             <!-- col // -->
             <div class="col-md-3 ">
                 <figure class="card card-product ">
-                    <div class="img-wrap "> <img src="https://s9.postimg.org/4ooze1tof/image.jpg " <a class="btn-overlay " href="# "><i class="fa fa-search-plus "></i> Quick view</a>
+                    <div class="img-wrap "> <img src="https://s9.postimg.org/4ooze1tof/image.jpg " <a
+                            class="btn-overlay " href="# "><i class="fa fa-search-plus "></i> Quick view</a>
                     </div>
                     <figcaption class="info-wrap ">
                         <h6 class="title text-dots "><a href="# ">The name of product</a></h6>
@@ -339,20 +334,21 @@
             <!-- col // -->
         </div>
         <!-- row.// -->
+    </div>
 
-        
+
 
 
 
 
 
         <script language="javascript ">
-            document.getElementById("search ").onclick = function() {
+            document.getElementById("search ").onclick = function () {
                 document.getElementById("quicksearch-hidden ").hidden = false;
                 document.getElementById("search ").hidden = true;
             };
 
-            document.getElementById("searchClose ").onclick = function() {
+            document.getElementById("searchClose ").onclick = function () {
                 document.getElementById("quicksearch-hidden ").hidden = true;
                 document.getElementById("search ").hidden = false;
             };
@@ -364,9 +360,15 @@
 
         <!-- Optional JavaScript -->
         <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js " integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo " crossorigin="anonymous "></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js " integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1 " crossorigin="anonymous "></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js " integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM " crossorigin="anonymous "></script>
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js "
+            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo "
+            crossorigin="anonymous "></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js "
+            integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1 "
+            crossorigin="anonymous "></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js "
+            integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM "
+            crossorigin="anonymous "></script>
 </body>
 
 </html>
