--- a/views/detail/index.hbs
+++ b/views/detail/index.hbs
@@ -1,20 +1,7 @@
-<!doctype html>
-<html lang="en">
 
-<head>
-    <title>Title</title>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <!-- Bootstrap CSS -->
-    <style>
+<style>
         @import url('https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap');
     </style>
-</head>
-
-<body>
-    
     <header>
         <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
             <ol class="carousel-indicators">
@@ -59,7 +46,7 @@
         </div>
     </header>
 
-    
+
 
     <div class="row">
         <div class="column">
@@ -92,7 +79,7 @@
     </div>
 
     <div style="margin-top: 30px;margin-bottom: -40px ;margin-left: 180px;font-size: 40px  ;font-family: Roboto Mono">
-        <p1 class = "p1">&nbspGIÀY MỚI&nbsp
+        <p1 class="p1">&nbspGIÀY MỚI&nbsp
         </p1>
     </div>
 
@@ -121,13 +108,13 @@
                 </p>
             </div>
         </div>
-        <div align = "center">
-        <button type="button" class="btn btn-secondary">&nbspXem tất cả&nbsp</button>
+        <div align="center">
+            <button type="button" class="btn btn-secondary">&nbspXem tất cả&nbsp</button>
         </div>
     </div>
 
     <div style="margin-top: 30px;margin-bottom: -110px ;margin-left: 180px;font-size: 40px  ;font-family: Roboto Mono">
-        <p1 class = "p1">&nbspBÁN NHIỀU&nbsp
+        <p1 class="p1">&nbspBÁN NHIỀU&nbsp
         </p1>
     </div>
 
@@ -154,24 +141,24 @@
                 </p>
             </div>
         </div>
-        <div align = "center">
-        <button type="button" class="btn btn-secondary">&nbspXem tất cả&nbsp</button>
+        <div align="center">
+            <button type="button" class="btn btn-secondary">&nbspXem tất cả&nbsp</button>
         </div>
     </div>
 
     <div style="margin-top: 60px;margin-bottom: -100px ;margin-left: 180px;font-size: 40px  ;font-family: Roboto Mono">
-        <p1 class = "p1">BỘ SƯU TẬP
+        <p1 class="p1">BỘ SƯU TẬP
         </p1>
     </div>
 
 
-    
+
     <div style="margin-top: 100px;margin-left:120px">
         <img src="../public/img/poster1.jpg">
     </div>
 
     <div style="margin-top: 30px;margin-bottom: -100px ;margin-left: 360px;font-size: 25px  ;font-family: Roboto Mono">
-        <p1 class = "p1">NIKE AIR - NEW WINTER COLLECTION
+        <p1 class="p1">NIKE AIR - NEW WINTER COLLECTION
         </p1>
     </div>
 
@@ -179,31 +166,35 @@
     <div class="row" style="margin-left: 80px;margin-top: 200px">
         <div class="columnS">
             <img src="../public/img/testConvese.jpg" alt=" ... " class="rounded-circle ">
-            <div style="margin-left: -100px;margin-top: 20px;margin-bottom: 30px;font-family: Roboto Mono;font-size: 25px" align ="center">Converse<br>Taylor</div>
+            <div style="margin-left: -100px;margin-top: 20px;margin-bottom: 30px;font-family: Roboto Mono;font-size: 25px"
+                align="center">Converse<br>Taylor</div>
         </div>
         <div class="columnS ">
-            <img src="../public/img/Giày-Nike-Air-max-97-đõ-300x300.jpg" alt=" ... " class="rounded-circle ">
-        <div style="margin-left: -100px;margin-top: 20px;margin-bottom: 30px;font-family: Roboto Mono;font-size: 25px" align ="center">Top<br>Trending</div>
+            <img src="../public/img/hhh.jpg" alt=" ... " class="rounded-circle ">
+            <div style="margin-left: -100px;margin-top: 20px;margin-bottom: 30px;font-family: Roboto Mono;font-size: 25px"
+                align="center">Top<br>Trending</div>
         </div>
         <div class="columnS ">
-            <img src="../public/img/75418993_793712877742665_6311140960398999552_n-300x300.jpg " class="rounded-circle ">
-        <div style="margin-left: -100px;margin-top: 20px;margin-bottom: 30px;font-family: Roboto Mono;font-size: 25px" align ="center">Độc Lạ</div>
+            <img src="../public/img/75418993_793712877742665_6311140960398999552_n-300x300.jpg "
+                class="rounded-circle ">
+            <div style="margin-left: -100px;margin-top: 20px;margin-bottom: 30px;font-family: Roboto Mono;font-size: 25px"
+                align="center">Độc Lạ</div>
         </div>
-        
+
     </div>
-    <div align = "center" style ="margin-top: 10px; margin-bottom: 80px;">
+    <div align="center" style="margin-top: 10px; margin-bottom: 80px;">
         <button type="button" class="btn btn-secondary">&nbspXem tất cả&nbsp</button>
-        </div>
+    </div>
 
 
 
     <script language="javascript ">
-        document.getElementById("search ").onclick = function() {
+        document.getElementById("search ").onclick = function () {
             document.getElementById("quicksearch-hidden ").hidden = false;
             document.getElementById("search ").hidden = true;
         };
 
-        document.getElementById("searchClose ").onclick = function() {
+        document.getElementById("searchClose ").onclick = function () {
             document.getElementById("quicksearch-hidden ").hidden = true;
             document.getElementById("search ").hidden = false;
         };
@@ -215,9 +206,12 @@
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js " integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo " crossorigin="anonymous "></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js " integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1 " crossorigin="anonymous "></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js " integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM " crossorigin="anonymous "></script>
-</body>
-
-</html>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js "
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo " crossorigin="anonymous ">
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js "
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1 " crossorigin="anonymous ">
+    </script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js "
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM " crossorigin="anonymous ">
+    </script>
