--- a/views/detail/login.hbs
+++ b/views/detail/login.hbs
@@ -58,11 +58,9 @@
       <div class="col-4 "></div>
       <div class="col-4 login_Form " >
         <form style="margin-top:4%;" action="login" method="POST">
-          <div class="form-group ">
-            <img src="img/icon_KHTN.png " alt="icon_KHTN " class="icon_KHTN ">
-            <label for="exampleInputEmail1 "
-              style="font-size: 50px;text-align: center; padding-top: 10px; padding-left: 40px;">THƯ
-              VIỆN</label>
+          <div class="form-group justify-content-center" >
+            <img src="../../public/img/logoSneaker.png" alt="icon" class="icon_KHTN " style="width: 50px; height: 50px; ">
+            <label for="inputLogin"style="font-size: 50px;text-align: center; padding-top: 10px; padding-left: 20px;">Sneaker Sale</label>
           </div>
           {{#if message}}
           <div class="form-group alert {{type}}">
@@ -80,8 +78,7 @@
             <input type="password" name="password" id="password" class="form-control validate" placeholder="Nhập mật khẩu">
           </div>
           <div class="col-12">
-                  <input type="checkbox" name ="keepLoggedIn"  id="keepLoggedIn" name="keepLoggedIn">
-                  <label for="keepLoggedIn">Keep me logged in</label>
+                  
           </div>
           <div class="row">
             <div class="col-5">
