--- a/public/css/payment.css
+++ b/public/css/payment.css
@@ -26,21 +26,28 @@ red {
 
 .table {
     background-color: #EFEFEF;
-    width: 40%;
+    width: 100%;
+    table-layout: fixed;
     align-items: right;
     margin-top: 20px;
     margin-bottom: 20px;
-    margin-left: 15px;
+}
+
+.table th {
+    font-size: 18px;
+    font-weight: bold;
 }
 
 .table tr {
     border: 1px solid #A4A4A4;
+    font-size: 15px;
 }
 
 .table td {
     /* border: 1px solid black; */
     width: 200px;
     text-align: left;
+    font-size: 15px;
 }
 
 .radio {
