--- a/views/detail/brand.hbs
+++ b/views/detail/brand.hbs
@@ -1,79 +1,15 @@
-<!doctype html>
-<html lang="en">
 <body>
-    <div class="container-fluid" id="header">
-        <div class="row" style="position: relative; border-bottom-style: solid; border-width: 1px;">
-
-            <h1 style="font-family: 'Roboto Mono', monospace;margin-left: 0;margin-right: 0;font-size: 35px;color:#15017E;"><img src="../public/img/logoSneaker.png" style="margin-top: -10px;width: 70px; height: 70px;">SNEAKERS SALES WEBSITE</h1>
-            <!--<h5 style="margin-top: 5px; margin-left: 15px">Đại học Khoa học tự nhiên<br>Khoa Công nghệ
-                        thông tin
-                    </h5> -->
-            <div></div>
-            <div class="CartButton" style=" position: absolute; right: 0; z-index: 1;">
-                <a href="">
-                    <img src="../public/img/Icon_Cart.png" alt="shopping cart" style="width: 70px; height: 70px;">
-                </a>
-
-            </div>
-        </div>
 
 
 
-        <nav class="navbar navbar-expand-lg navbar-light bg-light menu">
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#">TRANG CHỦ</a><span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="">BAND</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="">COLLECTION</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="">ABOUT</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="">ĐĂNG KÍ</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="">ĐĂNG NHẬP</a>
-                    </li>
-                </ul>
-            </div>
-            <div class="quicksearch">
-                <button class="btn" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample" id="search">
-                  </button>
-            </div>
-            <div class="" id="quicksearch-hidden" hidden=true>
-                <div class="input-group">
-                    <input type="text" class="form-control" id="searchInput">
-                    <div class="input-group-append">
-                        <a class="input-group-text" href="#" id="searchClose">
-                            <img src="img/search_button.png" alt=""><img src="../public/img/Icon_close.jpg" alt="" style="width: 20px;height: 20px;">
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </nav>
-    </div>
-    <div class="container-fluid ">
-        <div style="margin-top: 30px;margin-bottom: 0px ;margin-left: 0px;font-size: 18px  ;font-family: Roboto Mono">
-            <p1 class="p1">BRANDS
-            </p1>
-        </div>
-    </div>
 
     <div class="container-fluid ">
         <div style="margin-top: 10px;margin-bottom: 0px ;margin-left: -10px;font-size: 18px  ;font-family: Roboto Mono">
             <div class="dropdown show">
-                <a class="btn dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                              NIKE
-                            </a>
+                <a class="btn dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown"
+                    aria-haspopup="true" aria-expanded="false">
+                    NIKE
+                </a>
 
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
                     <a class="dropdown-item" href="">ADIDAS</a>
@@ -86,8 +22,12 @@
 
     <div class="container-fluid" style="margin-top: 10px;">
         <p style="font-family: Roboto Mono">
-            NIKE chính là cái tên lớn nhất trong ngành giày thể thao trên toàn thế giới. Nhờ vào những sáng tạo trong phong cách và luôn luôn đi đầu trong việc nắm bắt xu hướng thời trang thể thao và streetwear. Nike đã khẳng định tên tuổi mình như một tượng đài
-            bất diệt trong lòng người hâm mộ toàn cầu. Những dòng giày Nike rất được ưa chuộng tại Việt Nam như: Nike air max 97, air max 270, air max 95, air force 1, air jordan, air uptempo. Cùng xem qua những mẫu giày nike đang có mặt tại cửa hàng
+            NIKE chính là cái tên lớn nhất trong ngành giày thể thao trên toàn thế giới. Nhờ vào những sáng tạo trong
+            phong cách và luôn luôn đi đầu trong việc nắm bắt xu hướng thời trang thể thao và streetwear. Nike đã khẳng
+            định tên tuổi mình như một tượng đài
+            bất diệt trong lòng người hâm mộ toàn cầu. Những dòng giày Nike rất được ưa chuộng tại Việt Nam như: Nike
+            air max 97, air max 270, air max 95, air force 1, air jordan, air uptempo. Cùng xem qua những mẫu giày nike
+            đang có mặt tại cửa hàng
             Sneaker Sales.
         </p>
 
@@ -97,7 +37,8 @@
         <div class="row">
             <div class="columnT">
                 <div class="view overlay">
-                    <a href=""><img src="../public/img/sneaker/7-350x350.png" class="img-fluid " alt="Mountains" style="width:100%">
+                    <a href=""><img src="../public/img/sneaker/7-350x350.png" class="img-fluid " alt="Mountains"
+                            style="width:100%">
                         <div class="mask flex-center rgba-red-strong">
                             <p class="white-text" href="">View more</p>
                         </div>
@@ -112,7 +53,8 @@
             </div>
             <div class="columnT">
                 <div class="view overlay">
-                    <a href=""><img src="../public/img/sneaker/product_template_91523.jpeg" class="img-fluid " alt="Mountains" style="width:100%">
+                    <a href=""><img src="../public/img/sneaker/product_template_91523.jpeg" class="img-fluid "
+                            alt="Mountains" style="width:100%">
                         <div class="mask flex-center rgba-red-strong">
                             <p class="white-text" href="">View more</p>
                         </div>
@@ -127,7 +69,8 @@
             </div>
             <div class="columnT">
                 <div class="view overlay">
-                    <a href=""><img src="../public/img/sneaker/product_template_91565.jpeg" class="img-fluid " alt="Mountains" style="width:100%">
+                    <a href=""><img src="../public/img/sneaker/product_template_91565.jpeg" class="img-fluid "
+                            alt="Mountains" style="width:100%">
                         <div class="mask flex-center rgba-red-strong">
                             <p class="white-text" href="">View more</p>
                         </div>
@@ -142,7 +85,8 @@
             </div>
             <div class="columnT">
                 <div class="view overlay">
-                    <a href=""><img src="../public/img/sneaker/download.jpeg" class="img-fluid " alt="Mountains" style="width:100%">
+                    <a href=""><img src="../public/img/sneaker/download.jpeg" class="img-fluid " alt="Mountains"
+                            style="width:100%">
                         <div class="mask flex-center rgba-red-strong">
                             <p class="white-text" href="">View more</p>
                         </div>
@@ -160,7 +104,8 @@
             <div class="row" style="margin-left:0px;">
                 <div class="columnT">
                     <div class="view overlay">
-                        <a href=""><img src="../public/img/sneaker/nike-cj9179-200-air-force-1-07-wb-1-350x350.jpg" class="img-fluid " alt="Mountains" style="width:100%">
+                        <a href=""><img src="../public/img/sneaker/nike-cj9179-200-air-force-1-07-wb-1-350x350.jpg"
+                                class="img-fluid " alt="Mountains" style="width:100%">
                             <div class="mask flex-center rgba-red-strong">
                                 <p class="white-text" href="">View more</p>
                             </div>
@@ -175,7 +120,9 @@
                 </div>
                 <div class="columnT">
                     <div class="view overlay">
-                        <a href=""><img src="../public/img/sneaker/Nike-x-Kendrick-Lamar-Cortez-Basic-Slip-feat-350x350.jpg" class="img-fluid " alt="Mountains" style="width:100%">
+                        <a href=""><img
+                                src="../public/img/sneaker/Nike-x-Kendrick-Lamar-Cortez-Basic-Slip-feat-350x350.jpg"
+                                class="img-fluid " alt="Mountains" style="width:100%">
                             <div class="mask flex-center rgba-red-strong">
                                 <p class="white-text" href="">View more</p>
                             </div>
@@ -191,7 +138,8 @@
 
                 <div class="columnT">
                     <div class="view overlay">
-                        <a href=""><img src="../public/img/sneaker/images.jpeg" class="img-fluid " alt="Mountains" style="width:100%">
+                        <a href=""><img src="../public/img/sneaker/images.jpeg" class="img-fluid " alt="Mountains"
+                                style="width:100%">
                             <div class="mask flex-center rgba-red-strong">
                                 <p class="white-text" href="">View more</p>
                             </div>
@@ -207,54 +155,43 @@
 
             </div>
 
-            <div align="center" style="font-family: Roboto Mono;margin-left: 400px;margin-top: 20px;margin-bottom: 40px;">
+            <div align="center"
+                style="font-family: Roboto Mono;margin-left: 400px;margin-top: 20px;margin-bottom: 40px;">
                 <button type="button" href="" class="btn btn-link"> >>Xem tất cả giày NIKE</button>
             </div>
 
-            <div class="container-fluid " style="border-style: solid;border-color: white;border-top-color: #b0b0b0; ">
-                <div class="row " id="footer ">
-                    <p style="font-family: 'Roboto Mono', monospace; margin-left: 0;margin-right: 0;font-size: 15px;color:#15017E; "><img src="../public/img/logoSneaker.png " style="margin-top: -10px;width: 40px; height: 40px;
-            ">SNEAKERS SALES WEBSITE <br style="color: black ">217 Nguyễn Văn Cừ, Quận 5,<br>TP.HCM</p>
-                    <div class="col " id="footer-help ">
-                        <a href="# ">
-                            <h6 font-family: 'Roboto Mono', monospace;>GIỚI THIỆU TÔI VỀ SNEAKERS SALES</h6>
-                        </a>
-                        <a href="# ">
-                            <h6 font-family: 'Roboto Mono', monospace;>HỖ TRỢ</h6>
-                        </a>
-                        <a href="# ">
-                            <h6 font-family: 'Roboto Mono', monospace;>ĐIỀU KHOẢN SỬ DỤNG</h6>
-                        </a>
-                    </div>
-                </div>
-
-
-            </div>
+        </div>
+    </div>
 
 
 
 
-            <script language="javascript ">
-                document.getElementById("search ").onclick = function() {
-                    document.getElementById("quicksearch-hidden ").hidden = false;
-                    document.getElementById("search ").hidden = true;
-                };
+        <script language="javascript ">
+            document.getElementById("search ").onclick = function () {
+                document.getElementById("quicksearch-hidden ").hidden = false;
+                document.getElementById("search ").hidden = true;
+            };
 
-                document.getElementById("searchClose ").onclick = function() {
-                    document.getElementById("quicksearch-hidden ").hidden = true;
-                    document.getElementById("search ").hidden = false;
-                };
-            </script>
-            <script>
-                $(".noti-badge ").prepend($(".noti a ").length)
-            </script>
+            document.getElementById("searchClose ").onclick = function () {
+                document.getElementById("quicksearch-hidden ").hidden = true;
+                document.getElementById("search ").hidden = false;
+            };
+        </script>
+        <script>
+            $(".noti-badge ").prepend($(".noti a ").length)
+        </script>
 
 
-            <!-- Optional JavaScript -->
-            <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-            <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js " integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo " crossorigin="anonymous "></script>
-            <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js " integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1 " crossorigin="anonymous "></script>
-            <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js " integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM " crossorigin="anonymous "></script>
+        <!-- Optional JavaScript -->
+        <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js "
+            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo "
+            crossorigin="anonymous "></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js "
+            integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1 "
+            crossorigin="anonymous "></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js "
+            integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM "
+            crossorigin="anonymous "></script>
+
 </body>
-
-</html>
