--- a/views/detail/signUp.hbs
+++ b/views/detail/signUp.hbs
@@ -30,17 +30,16 @@
                   placeholder="Nhập lại mật khẩu">
               </div>
               <div class="form-group ">
-                <label for="username ">Email sinh viên / giảng viên</label>
+                <label for="username ">Email</label>
                 <input type="email " class="form-control "  name ="username" id="username"
                   placeholder="Enter email ">
               </div>
               <div class="row">
                 <div class="col-7">
-                  <input type="checkbox" name ="keepLoggedIn"  id="keepLoggedIn" name="keepLoggedIn">
-                  <label for="keepLoggedIn">Keep me logged in</label>
+                  
                 </div>
                 <div class="col-5">
-                  <button type="submit " class="btn btn-primary " style="float: right;" value="Submit">Dang ki
+                  <button type="submit " class="btn btn-primary " style="float: right;" value="Submit">Đăng kí
                     {{!-- <a href="/index"
                                         style="color:white;text-decoration:none;">Đăng kí</a> --}}
                   </button>
