--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -33,11 +33,14 @@
           <a class="nav-link" href="/collection">COLLECTION</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="">ABOUT</a>
+          <a class="nav-link" href="/about">ABOUT</a>
         </li>
         {{#if isLoggedIn}}
         <li class="nav-item">
           <a class="nav-link" href="/">{{username}}</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/order">View Order</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/user/logout">Log Out</a>
